--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <a href="#">Kapcsolat</a> <br />
       </div>
       <div class="images">
-        <div class="imgbox"></div>
-        <div class="imgbox"></div>
-        <div class="imgbox"></div>
-        <div class="imgbox"></div>
-        <div class="imgbox"></div>
-        <div class="imgbox"></div>
-        <div class="imgbox"></div>
-        <div class="imgbox"></div>
+        <div class="imgbox 1"></div>
+        <div class="imgbox 2"></div>
+        <div class="imgbox 3"></div>
+        <div class="imgbox 4"></div>
+        <div class="imgbox 5"></div>
+        <div class="imgbox 6"></div>
+        <div class="imgbox 7"></div>
+        <div class="imgbox 8"></div>
       </div>
       <div class="text">
         <h1>Tél</h1>
