--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <div class="grid">
       <div class="header"> <h1>Téli versek és egyéb gondolatok</h1></div>
-      <div class="buttons">
-        <a href="#">Versek</a> <br />
-        <a href="#">Galéria</a> <br />
-        <a href="#">Rólunk</a> <br />
-        <a href="#">Kapcsolat</a> <br />
+      <div class="menu">
+        <div class="button"> <a href="#">Versek</a> </div> <br />
+        <div class="button"> <a href="#">Galéria</a> </div> <br />
+        <div class="button"> <a href="#">Rólunk</a> </div> <br />
+        <div class="button"> <a href="#">Kapcsolat</a> </div> <br />
       </div>
       <div class="images">
         <div class="imgbox 1"></div>
