--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <div class="button"> <a href="#">Kapcsolat</a> </div> <br />
       </div>
       <div class="images">
-        <div class="imgbox 1"></div>
-        <div class="imgbox 2"></div>
-        <div class="imgbox 3"></div>
-        <div class="imgbox 4"></div>
-        <div class="imgbox 5"></div>
-        <div class="imgbox 6"></div>
-        <div class="imgbox 7"></div>
-        <div class="imgbox 8"></div>
+        <div class="imgbox jobb"> <img src="kepek/tel1.jpg" width="180" height="160"></div>
+        <div class="imgbox bal"><img src="kepek/tel2.jpg" width="180" height="160"></div>
+        <div class="imgbox jobb"> <img src="kepek/tel3.jpg" width="180" height="160"></div>
+        <div class="imgbox bal"><img src="kepek/tel4.jpg" width="180" height="160"></div>
+        <div class="imgbox jobb"> <img src="kepek/tel5.jpg" width="180" height="160"></div>
+        <div class="imgbox bal"><img src="kepek/tel6.jpg" width="180" height="160"></div>
+        <div class="imgbox jobb"> <img src="kepek/tel7.jpg" width="180" height="160"></div>
+        <div class="imgbox bal"><img src="kepek/tel8.jpg" width="180" height="160"></div>
+        
       </div>
       <div class="text">
         <h1>Tél</h1>
