--- a/index.html
+++ b/index.html
@@ -3,27 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Versek</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
-Ady Endre: A téli Magyarország
-Magyar síkon nagy iramban át
-Ha nyargal a gőzös velem
-Havas, nagy téli éjjelen,
-Alusznak a tanyák.
-Olyan fehér és árva a sík,
-Fölötte álom-éneket
-Dúdolnak a hideg szelek.
-Vajon mit álmodik?
-Álmodik-e, álma még maradt?
-Én most karácsonyra megyek,
-Régi, vén, falusi gyerek.
-De lelkem hó alatt.
-S ahogy futok síkon, telen át,
-Úgy érzem, halottak vagyunk
-És álom nélkül álmodunk,
-Én s a magyar tanyák.
+    <div class="grid">
+        <div class="header"><h1>Téli versek és egyéb gondolatok</h1></div>
+        <div class="menu">
+          <div class="button"><a href="#">Versek</a></div>
+          <br />
+          <div class="button"><a href="#">Galéria</a></div>
+          <br />
+          <div class="button"><a href="#">Rólunk</a></div>
+          <br />
+          <div class="button"><a href="#">Kapcsolat</a></div>
+          <br />
+        </div>
+        <div class="images">
+          <div class="felso">
+              <div class="imgbox jobb">
+              <img src="kepek/tel1.jpg" width="180" height="140" />
+              </div>
+              <div class="imgbox bal">
+              <img src="kepek/tel2.jpg" width="180" height="140" />
+              </div>
+              <div class="imgbox jobb">
+              <img src="kepek/tel3.jpg" width="180" height="140" />
+              </div>
+              <div class="imgbox bal">
+              <img src="kepek/tel4.jpg" width="180" height="140" />
+              </div>
+          </div>
+          <div class="also">
+              <div class="imgbox jobb">
+              <img src="kepek/tel5.jpg" width="180" height="140" />
+              </div>
+              <div class="imgbox bal">
+              <img src="kepek/tel6.jpg" width="180" height="140" />
+              </div>
+              <div class="imgbox jobb">
+              <img src="kepek/tel7.jpg" width="180" height="140" />
+              </div>
+              <div class="imgbox bal">
+              <img src="kepek/tel8.jpg" width="180" height="140" />
+              </div>
+          </div>
+        </div>
+        <div class="text">
+            <h1>Ady Endre: A téli Magyarország</h1>
+            <p>
+                Magyar síkon nagy iramban át
+                Ha nyargal a gőzös velem
+                Havas, nagy téli éjjelen,
+                Alusznak a tanyák.
+            </p>
+            <p>
+                Olyan fehér és árva a sík,
+                Fölötte álom-éneket
+                Dúdolnak a hideg szelek.
+                Vajon mit álmodik?
+            </p>
+            <p>
+                Álmodik-e, álma még maradt?
+                Én most karácsonyra megyek,
+                Régi, vén, falusi gyerek.
+                De lelkem hó alatt.
+            </p>
+            <p>
+                S ahogy futok síkon, telen át,
+                Úgy érzem, halottak vagyunk
+                És álom nélkül álmodunk,
+                Én s a magyar tanyák.
+            </p>
+        </div>
+        <div class="footer">
+          <p>Készítette Gál-Karikás Anna Illés Leila ötlete alapján.</p>
+        </div>
+      </div>
+
 
 </body>
 </html>
