--- a/index.html
+++ b/index.html
@@ -19,35 +19,8 @@
           <div class="button"><a href="#">Kapcsolat</a></div>
           <br />
         </div>
-        <div class="images">
-          <div class="felso">
-              <div class="imgbox jobb">
-              <img src="kepek/tel1.jpg" width="180" height="140" />
-              </div>
-              <div class="imgbox bal">
-              <img src="kepek/tel2.jpg" width="180" height="140" />
-              </div>
-              <div class="imgbox jobb">
-              <img src="kepek/tel3.jpg" width="180" height="140" />
-              </div>
-              <div class="imgbox bal">
-              <img src="kepek/tel4.jpg" width="180" height="140" />
-              </div>
-          </div>
-          <div class="also">
-              <div class="imgbox jobb">
-              <img src="kepek/tel5.jpg" width="180" height="140" />
-              </div>
-              <div class="imgbox bal">
-              <img src="kepek/tel6.jpg" width="180" height="140" />
-              </div>
-              <div class="imgbox jobb">
-              <img src="kepek/tel7.jpg" width="180" height="140" />
-              </div>
-              <div class="imgbox bal">
-              <img src="kepek/tel8.jpg" width="180" height="140" />
-              </div>
-          </div>
+        <div class="table">
+          
         </div>
         <div class="text">
             <h1>Ady Endre: A téli Magyarország</h1>
