--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
           
         </div>
         <div class="text">
-            <h1>Ady Endre: A téli Magyarország</h1>
+            <h2>Ady Endre: A téli Magyarország</h2>
             <p>
-                Magyar síkon nagy iramban át
-                Ha nyargal a gőzös velem
-                Havas, nagy téli éjjelen,
+                Magyar síkon nagy iramban át <br>
+                Ha nyargal a gőzös velem <br>
+                Havas, nagy téli éjjelen, <br>
                 Alusznak a tanyák.
             </p>
             <p>
-                Olyan fehér és árva a sík,
-                Fölötte álom-éneket
-                Dúdolnak a hideg szelek.
+                Olyan fehér és árva a sík, <br>
+                Fölötte álom-éneket <br>
+                Dúdolnak a hideg szelek. <br>
                 Vajon mit álmodik?
             </p>
             <p>
-                Álmodik-e, álma még maradt?
-                Én most karácsonyra megyek,
-                Régi, vén, falusi gyerek.
+                Álmodik-e, álma még maradt? <br>
+                Én most karácsonyra megyek, <br>
+                Régi, vén, falusi gyerek. <br>
                 De lelkem hó alatt.
             </p>
             <p>
-                S ahogy futok síkon, telen át,
-                Úgy érzem, halottak vagyunk
-                És álom nélkül álmodunk,
+                S ahogy futok síkon, telen át, <br>
+                Úgy érzem, halottak vagyunk <br>
+                És álom nélkül álmodunk, <br>
                 Én s a magyar tanyák.
             </p>
         </div>
